--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.ts",
-    "seed": "ts-node fixtures.tx"
+    "seed": "ts-node fixtures.ts"
   },
   "keywords": [],
   "author": "",
